--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> <%=blocks.title%></title>
+		<title> qweqwr</title>
 
 		<link rel="stylesheet" href="./public/stylesheets/app.css">
 
