--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2321,17 +2321,26 @@ textarea {
 
    .font-weight{font-weight:900;}
    .brd {
-    background: linear-gradient(to top, #fefcea, #f1da36);
-    border:  2px solid #9400D3; /* Ïàðàìåòðû ãðàíèöû */
-    padding: 20px; /* Ïîëÿ âîêðóã òåêñòà */
+    /*background: url(../images/shpori.jpg);*/
+    /*border:  2px solid #9400D3; /* Ïàðàìåòðû ãðàíèöû */*/
+    padding: 0px; /* Ïîëÿ âîêðóã òåêñòà */
     width: 50%; /* Øèðèíà */
     color:blue;
     border-radius: 20px;
-    margin: 20px 0 20px 20px;
+    margin: -20px 0px 0px 0px;
+    margin-right: 30px;
     box-shadow: 7px 7px 5px rgba(0,0,0,0.5);
     position: releative;
     bottom: 580px;
-box-sizing: border-box;
+
+    box-sizing: border-box;
+      float: left;
+   }
+   .textfrontbrd {
+    padding-left: 30px;
+    font-size:200%;
+    font-weight: 900;
+    font-family: Comic Sans MS;
    }
     .password {
     border:  2px solid #9400D3; /* Ïàðàìåòðû ãðàíèöû */
@@ -2681,6 +2690,7 @@ padding-left: 300px;
 .team li h3 {
 margin-bottom:70px;
 }
+
 .res li {
   position: relative;
 }
