--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Tender A Corporate category Flat bootstrap Responsive  Website Template | About :: w3layouts</title>
+<title>SARA's</title>
 <link href="./css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="./js/jquery.min.js"></script>
@@ -90,19 +90,18 @@
 				<ul class="res">
 					<li><a href="../shpore">Головна</a></li>
         <li> <a class="active" href="../about">Предмети</a>
+          <ul class='submenu' id="submenu">
+          </ul>
+          <script>
+          var submenu = document.getElementById('submenu');
+          $(document).ready(function(){
+            '<% for(var i=0; i < routes.length; i++) {%>';
+           submenu.innerHTML += '<li><a href="../<%=routes[i].url%>"><%=routes[i].name%></a></li>';
+            '<% } %>';
+          });
+             </script>
 
-            <ul class="submenu">
-
-              <li><a href="../math">Математика</a></li>
-
-              <li><a href="../english">Англійська</a></li>
-
-               <li><a href="../biology">Біологія</a></li>
-
-
-            </ul>
-
-      </li>
+    </li>
 					<li><a href="../upload">Завантаження</a></li>
 					<li><a href="contact">Про нас</a></li>
           <li><a href="../personal_room">Oсобистий кабiнет</a></li>
@@ -166,8 +165,8 @@
   </script>
    <li>
     <img src="<%= books[i].url %>" width="200px" height="150px" class="locked" id='img'>
-    <h3><%= books[i].name %></h3>
-   <button type="submit" name="button" onclick="pay(value)" value="<%=books[i].url %>" >Cкачать</button>
+    <h3><%= books[i].name.split('_')[1] %></h3>
+   <button type="submit" name="button" onclick="pay(value)" value="<%=books[i].url %>" >Cкачати (30 монет)</button>
    <!-- <a href='#' name="sbm" onClick='submit();'>Войти</a> -->
 
  </li>
