--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Tender A Corporate category Flat bootstrap Responsive  Website Template | Contact :: w3layouts</title>
+<title>SARA's</title>
 <link href="./css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="./js/jquery.min.js"></script>
@@ -53,18 +53,18 @@
 				<ul class="res">
 					<li><a href="../shpore">Головна</a></li>
           <li> <a href="../about">Предмети</a>
+            <ul class='submenu' id="submenu">
+            </ul>
+            <script>
+            var submenu = document.getElementById('submenu');
+            $(document).ready(function(){
+              '<% for(var i=0; i < routes.length; i++) {%>';
+             submenu.innerHTML += '<li><a href="../<%=routes[i].url%>"><%=routes[i].name%></a></li>';
+              '<% } %>';
+            });
+               </script>
 
-              <ul class="submenu">
-
-                <li><a href="../math">Математика</a></li>
-
-                <li><a href="../english">Англійська</a></li>
-
-                 <li><a href="../biology">Біологія</a></li>
-
-              </ul>
-
-        </li>
+      </li>
 					<li><a href="../upload">Завантаження</a></li>
 					<li><a class="active" href="contact">Про нас</a></li>
           <li><a href="../personal_room">Oсобистий кабiнет</a></li>
