--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Tender A Corporate category Flat bootstrap Responsive  Website Template | Contact :: w3layouts</title>
+<title>SARA's</title>
 <link href="./css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="./js/jquery.min.js"></script>
@@ -54,17 +54,18 @@
 					<li><a href="../shpore">Головна</a></li>
           <li> <a href="../about">Предмети</a>
 
-              <ul class="submenu">
+                                  <ul class='submenu' id="submenu">
+                                  </ul>
+                                  <script>
+                                  var submenu = document.getElementById('submenu');
+                                  $(document).ready(function(){
+                                    '<% for(var i=0; i < routes.length; i++) {%>';
+                                   submenu.innerHTML += '<li><a href="<%=routes[i].url%>"><%=routes[i].name%></a></li>';
+                                    '<% } %>';
+                                  });
+                                     </script>
 
-                <li><a href="../math">Математика</a></li>
-
-                <li><a href="../english">Англійська</a></li>
-
-                 <li><a href="../biology">Біологія</a></li>
-
-              </ul>
-
-        </li>
+                            </li>
 					<li><a href="../upload">Завантаження</a></li>
 					<li><a class="active" href="contact">Про нас</a></li>
           <li><a href="../personal_room">Oсобистий кабiнет</a></li>
@@ -101,7 +102,7 @@
 		</div>
 	</div>
 	<div class="col-md-3 team-grid">
-		<img src="images/t1.jpg" alt=""/>
+		<img src="images/kate.jpg" alt="" height="255px"/>
 		<div class="team-bottom">
 			<p>Катя</p>
 		</div>
