--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -1,136 +1,189 @@
 
-<!DOCTYPE html>
-<html lang="ru">
-<head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="xfakehopex">
-<title>Node.js File Uploads</title>
-<link rel="stylesheet" href="./css/bootstrap.min.css">
-<link rel="stylesheet" href="./css/main.css">
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>SARA's</title>
+<link href="./css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script type="text/javascript" src='./js/money.js'></script>
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="./css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
-</script>
-<style media="screen">
-.locked {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  pointer-events: none;
-}
-ul {
- list-style: none; /* Квадратные маркеры */
-                            /* Маркеры размещаются за
-                               пределами текстового блока */
-}
-.team li {
-  position: relative;
-}
-.team li a {
-  color: red;
-  position: absolute;
-  left: 80%;
-  top: 70px;
-}
-.team li h3 {
-margin-top:-70px;
-padding-left: 300px;
-}
-.team li h3 {
-margin-bottom:70px;
-}
-.res li {
-  position: relative;
-}
-.res. {
-  position: relative;
-}
-.res li img {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: 100%;
-  top:10px;
-}
-.res li.money {
-margin-left: 200px;
-}
-#money {
-  color:white;
-  width: 80px;
-  border: none;
-}
-body {
-  font-size:120%;
-}
-</style>
+<meta http-equiv="imagetoolbar" content="no" />
+<script type="text/javascript">
+(function () {
+  "use strict";
 
+  var el = document.createElement('div');
+  el.style.cssText = 'pointer-events:auto';
+
+  if (el.style.pointerEvents !== 'auto') {
+      el = null;
+
+      var _lock = function (evt) {
+          evt = evt || window.event;
+          var el = evt.target || evt.srcElement;
+          if (el && /\slocked\s/.test(' ' + el.className + ' ')) {
+              if (evt.stopPropagation) {
+                  evt.preventDefault();
+                  evt.stopPropagation();
+              } else {
+                  evt.returnValue = true;
+                  evt.cancelBubble = true;
+              }
+          }
+      };
+
+      if (document.addEventListener) {
+          document.addEventListener('mousedown', _lock, false);
+          document.addEventListener('contextmenu', _lock, false);
+      } else {
+          document.attachEvent('onmousedown', _lock);
+          document.attachEvent('oncontextmenu', _lock);
+      }
+  }
+})();
+</script>
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }>
+</script>
 <meta name="keywords" content="Tender Responsive web template, Bootstrap Web Templates, Flat Web Templates, AndriodCompatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <!--Google Fonts-->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<!-- start-smoth-scrolling -->
+<script type="text/javascript" src="./js/move-top.js"></script>
+<script type="text/javascript" src="./js/easing.js"></script>
+	<script type="text/javascript">
+			jQuery(document).ready(function($) {
+				$(".scroll").click(function(event){
+					event.preventDefault();
+					$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+				});
+			});
+	</script>
+<!-- //end-smoth-scrolling -->
 </head>
 <body>
-  <div class="mother-grid">
-    <div class="container">
-      <div class="temp-padd">
-  <!--top nav end here-->
-  <!--title start here-->
-  <div class="top-authoriz">
-  				<span class="top-authoriz1">
-  				<a href="../login" class="top-authoriz1">Вийти</a>
-  				</div>
-  <div class="title-main">
-        <a href="#"><h1>SARA's STUDY</h1></a>
-  </div>
-  <div class="header">
-  			<div class="navg">
-  				<span class="menu"> <img src="images/icon.png" alt=""/></span>
-  				<ul class="res">
-  					<li><a href="../shpore">Головна</a></li>
-  					<li><a href="../about">Предмети</a></li>
-  					<li><a href="../upload" class="active">Завантаження</a></li>
-  					<li><a href="contact">Про нас</a></li>
-            <li><a href="../personal_room">Личный кабинет</a></li>
-            <li>  <input onkeydown="size=value.length||2" onkeyup="onkeydown()" disabled type='text' id='money' value="<%=money%>" name='money'></h4><img src='./images/money.png'><li>
-  				</ul>
-  				<script>
-                    $( "span.menu").click(function() {
-                      $(  "ul.res" ).slideToggle("slow", function() {
-                       // Animation complete.
-                       });
-                       });
-  		       </script>
-  			</div>
-  			<div class="clearfix"> </div>
-    </div>
-<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<!-- start-smoth-scrolling -->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
-<!--HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries--><!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-<input type="file" style="display: none" name="uploadFiles" id="uploadFiles" multiple>
-<div class="container"><h1>File Uploads</h1><hr>
+<!--top nav start here-->
+<div class="mother-grid">
+	<div class="container">
+	  <div class="temp-padd">
 
-<input type="file" style="display: none" name="uploadFiles" id="uploadFiles" multiple>
-<div style="margin-bottom:15px">
-  <button id="addFilesButton" class="btn btn-primary">Add files</button>
+<!--top nav end here-->
+<!--title start here-->
+<div class="top-authoriz">
+				<span class="top-authoriz1">
+				<a href="../login" class="top-authoriz1">Вийти</a>
+				</div>
+<div class="title-main">
+<a href="#"><h1>SARA's STUDY</h1></a>
+
 </div>
-<div class="progress">
-  <div id="progress" role="progressbar" style="width: 0%" class="progress-bar">
+<!--title end here-->
+<!--header start here-->
+          <form id="myForm">
+<div class="header">
+			<div class="navg">
+				<span class="menu"> <img src="images/icon.png" alt=""/></span>
+				<ul class="res">
+					<li><a href="../shpore">Головна</a></li>
+          <li> <a class="active" href="../about">Предмети</a>
+
+              <ul class="submenu">
+
+                <li><a href="../math">Математика</a></li>
+
+                <li><a href="../english">Англійська</a></li>
+
+                 <li><a href="../biology">Біологія</a></li>
+
+              </ul>
+
+        </li>
+					<li><a href="../upload">Завантаження</a></li>
+					<li><a href="contact">Про нас</a></li>
+          <li><a href="../personal_room">Личный кабинет</a></li>
+          <li>  <input onkeydown="size=value.length||2" onkeyup="onkeydown()" disabled type='text' id='money' value="" name='money'></h4><img src='./images/money.png'><li>
+
+          <script>
+          var money = 0;
+        $(function () {
+            $("#myForm").submit(function (event) {
+              event.preventDefault();
+              $.post("/math", function(response)   {
+                if (response.status === 'bad') {
+                  // alert('Не достатньо коштiв на рахунку!')
+                } else {
+                money = response.money;
+                $('#money').val(response.money);
+                }
+              });
+
+            })
+          })
+
+
+          </script>
+
+
+
+        </ul>
+				<script>
+                  $( "span.menu").click(function() {
+                    $(  "ul.res" ).slideToggle("slow", function() {
+                     // Animation complete.
+                     });
+                     });
+		       </script>
+			</div>
+			<div class="clearfix"> </div>
   </div>
+<!--header end here-->
+<div class="team">
+	<h3>Математика</h3>
+  <p id="lead">  </p>
+  <ul>
+  </ul>
+  <ul>
+<% for(var i=0; i < books.length; i++) {%>
+  <script type="text/javascript">
+  function pay() {
+    var link = document.createElement('a');
+    if ($('#money').val() < 19) {
+    link.setAttribute('download', null);
+    alert('Не достатньо коштiв на рахунку!')
+  } else {
+    link.setAttribute('href','<%= books[i].url %>');
+    link.setAttribute('download','<%= books[i].name %>');
+  }
+    onload=link.click();
+  };
+  </script>
+   <li>
+    <img src="<%= books[i].url %>" width="200px" height="150px" class="locked" id='img'>
+    <h3><%= books[i].name %></h3>
+   <button type="submit" name="button" onclick="pay()" >Cкачать</button>
+ </li>
+
+<% } %>
+</ul>
+	<div class="clearfix"> </div>
 </div>
-<table id="files" class="table">
-</table>
-</div><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="./js/bootstrap.min.js"></script><script src="./js/image.upload.js"></script></body></html>
+</div>
+<!--about end here-->
+<!--footer start here-->
+  <div class="footer">
+		<div class="footer-main">
+			<div class="footer-bottom">
+				<p>© Практиканти 2017  </a></p>
+			</div>
+		</div>
+	   </div>
+   </div>
+  </div>
+            </form>
+<!--footer end here-->
+</body>
+</html>
